k8s/openglotWeb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openglot-web-service
spec:
  selector:
    app: openglot-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
