k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - openglot.com
    secretName: tls-secret-web
  rules:
  - host: openglot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openglot-web-service
            port:
              number: 80
